# DataRetievingUsb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: DataHandling.h  Log.h  Settings.h  Usb.h  UsbDevice.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  timestamps-192.168.0.16-pi-22
res/: DataRetreiveUsb.conf  DataRetreiveUsb.service  DataRetrevieUsb.conf  settings.conf
src/: DataHandling.cpp  Log.cpp  Settings.cpp  Usb.cpp  UsbDevice.cpp  main.cpp
